# pp6-ml

./: .env.example  .gitignore  README.md  environment.yml  environment_init.yml  parameter_description.txt  pyproject.toml
data/: count_presets_output.txt  count_presets_output.txt.txt  dataset.parquet  dataset_30.parquet  dataset_30_1000_1030.parquet  dataset_30_1000_1030_embedded.parquet  dataset_30_1000_1030_stats.csv  dataset_30_420_450_embedded.parquet  dataset_30_raw.parquet  dataset_30_raw_embedded.parquet  dataset_30_raw_stats.csv  dataset_30_stats.csv  dataset_raw.parquet  dataset_raw_stats.csv  dataset_stats.csv  example-preset.h2p  example_preset.h2p  parameter_description.txt  sources.txt
results/: cvae_dataset_30_results.parquet  cvae_dataset_30_results_stats.csv  cvae_dataset_results_no-nf_no-cross-attention.parquet  cvae_dataset_results_stats_no-nf_no-cross-attention.csv
results/dataset/: cvae_dataset_results_20250904_201049_compl.parquet  cvae_dataset_results_20250904_201049_short.parquet  cvae_dataset_results_stats_20250904_201049_compl.csv  cvae_dataset_results_stats_20250904_201049_short.csv  les_dataset_results_2_2_short.parquet  les_dataset_results_5_10_short.parquet  les_dataset_results_stats_2_2_short.csv  les_dataset_results_stats_5_10_short.csv
results/dataset_30/: cvae_dataset_30_results_stats.csv
src/: __init__.py  convert_file_types.py  count_presets.py  evaluate_cvae.py  generate_embeddings.py  process_cvae.py  process_les.py  read_presets.py  train_cvae.py  visualize_stats.py
src/clap/: init_clap.py
src/clap_utils/: __init__.py  (+2 more)
(+54 files in other folders)
